--- a/packages/default/scss/core/mixins/_hide-scrollbar.scss
+++ b/packages/default/scss/core/mixins/_hide-scrollbar.scss
@@ -1,8 +1,8 @@
 // Infinite calendar and timepicker
 @mixin hide-scrollbar($dir: "right", $max-scrollbar: 100px) {
     // anything larger than the scrollbar width will do
-    $scrollbar-size: 17px;
-    $margin: -$max-scrollbar - $scrollbar-size;
+    $scrollbar-size: var( --kendo-scrollbar-width, #{$default-scrollbar-width} );
+    $margin: calc( -#{$max-scrollbar} - #{$scrollbar-size} );
 
     padding-right: $max-scrollbar;
     padding-left: $max-scrollbar;
