--- a/packages/fluent/scss/timeselector/_layout.scss
+++ b/packages/fluent/scss/timeselector/_layout.scss
@@ -121,7 +121,7 @@
             }
 
             &::before {
-                top: calc( var( --kendo-time-list-title-spacing, #{$kendo-time-list-title-spacing} ) + var( --kendo-time-list-title-height, #{$kendo-time-list-title-height} ) );
+                top: calc( var( --kendo-time-list-title-height, #{$kendo-time-list-title-height} ) );
             }
 
             &::after {
